[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/dialogue_system/next-indicator.png" type="Texture" id=1]
[ext_resource path="res://resources/script/dialog.gd" type="Script" id=2]
[ext_resource path="res://scenes/DialogueLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/dialogue_Ui/paper_hor.png" type="Texture" id=4]
[ext_resource path="res://scenes/dialogue_controller.gd" type="Script" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="DialogueSystem" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0
margin_bottom = 0.000427246
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogue_file_path = "res://resources/dialogue/first.json"

[node name="DialogBox" type="Control" parent="DialogueSystem"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0001
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="TextureRect" parent="DialogueSystem/DialogBox"]
anchor_left = 0.55
anchor_top = 1.05
anchor_right = 0.55
anchor_bottom = 1.05
margin_left = -235.347
margin_top = -155.92
margin_right = 236.653
margin_bottom = -27.9208
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue" type="Label" parent="DialogueSystem/DialogBox/box"]
anchor_left = -1.0572
anchor_top = -3.36251
anchor_right = -0.396186
anchor_bottom = -2.73751
margin_left = 600.0
margin_top = 446.4
margin_right = 640.0
margin_bottom = 460.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dialogue"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="speaker" type="Label" parent="DialogueSystem/DialogBox/box"]
anchor_left = -1.22361
anchor_top = -3.27542
anchor_right = -1.1537
anchor_bottom = -3.21292
margin_left = 600.0
margin_top = 446.4
margin_right = 640.0
margin_bottom = 460.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speaker"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="DialogueSystem/DialogBox/box"]
margin_left = 378.597
margin_top = 93.2273
margin_right = 410.597
margin_bottom = 121.227
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueSystem"]

[node name="DialogueLoader" parent="DialogueSystem" instance=ExtResource( 3 )]
[connection signal="button_down" from="DialogueSystem/DialogBox/box/Button" to="DialogueSystem" method="_on_Button_button_down"]
